Adds translations for cities + about button + about me header; makes chevron

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,16 @@
 {
   "header": {
-    "h2": "Full stack web developer"
-  }
+    "Full-stack-developer": "Full stack developer",
+    "Melbourne": "Melbourne",
+    "NYC": "NYC",
+    "Paris": "Paris",
+    "Tokyo": "Tokyo",
+    "Oslo": "Oslo"
+  },
+    "main": {
+      "About": "About"
+    },
+    "about": {
+      "About me": "Hi there"
+    }
 }
