More translation text set-up

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,28 @@
       "About": "About"
     },
     "about": {
-      "About me": "Hi there"
+      "About me": "Hi there.",
+      "About main text": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. /n Omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.",
+      "My values": "My values (and things I'm figuring out).",
+      "Make it ok to be wrong": "Make it ok to be wrong",
+      "Make it ok to be wrong text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
+      "Be the one to change and be vulnerable": "Be the one to change and be vulnerable",
+      "Be the one to change and be vulnerable text": "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+      "Care about the people you work with": "Care about the people you work with",
+      "Care about the people you work with text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+      "People can change": "People can change",
+      "People can change text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    },
+    "work": {
+      "RACI Project Management Web App": "RACI Project Management Web App",
+      "Digital Innovation Statistics App": "Digital Innovation Statistics App",
+      "Food Systems Dialogues": "Food Systems Dialogues",
+      "(Product-managed)": "(Product-managed)",
+      "Particles": "Particles",
+      "Front end": "Front end",
+      "Back end": "Back end",
+      "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
+      "Project main text  ": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
     }
+
 }
