Adds translations for footer; adds further styling of footer

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -33,5 +33,9 @@
     "Back end": "Back end",
     "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
     "Project main text  ": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
-  }
+  },
+    "footer": {
+      "Don't hesitate to say hello": "N'hésites pas à dire hello / こんにちは / 你好! ",
+      "I would love to hear from you": "Ça me ferait plaisir de faire ta connaissance!"
+    }
 }
