--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,8 @@
       "Project main text  ": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
     },
     "footer": {
-      "text" : ""
+      "Don't hesitate to say hello" : "Don't hesitate to say hello ... or bonjour, こんにちは, 你好, etc ...",
+      "I would love to hear from you": "I would love to hear from you!"
     }
 
 }
