--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -34,5 +34,9 @@
     "Back end": "Back end",
     "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
     "Project main text  ": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
-  }
+  },
+    "footer": {
+      "Don't hesitate to say hello": "Hello ・　ボンジュア ・ 你好 を言って、まわないでください ! ",
+      "I would love to hear from you": "友達になりましょう。"
+    }
 }
