Makes French translations of values headers; changes to French translation of About main text; changes side button text from Work to Home; changes side-button CSS

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,6 +25,7 @@
       "People can change text": "In the right environment, cultivating a growth mindset, you can be the person you want to be. I do not have a perfect growth mindset, but I’m working on it. As I come to ‘see’ more and more of the influences which have shaped the mindsets and behaviors I have currently, it helps me choose which ones to let go of and which other ones to go after.\n\nUnfamiliar things and change can make a lot of fear pour out, and it takes a lot of energy to work through them. And maybe you - or the people in your life - are not in the right environment or it’s not the right moment to succeed at changing. But there are ways to make it easier - for yourself and for others - to change. And it’s an amazing gift to give yourself and the people around you to forgive your stumbles, try not to judge, and design a strategy to support the change you want."
     },
     "work": {
+      "Work button": "Home",
       "Product-managed": "Product-managed",
       "Front end": "Front end",
       "Back end": "Back end",
