--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -12,19 +12,20 @@
   },
   "about": {
     "About me": "Enchantée de faire votre connaissance.",
-    "About main text": "J’adore la technologie et le processus de développement de produits. C’est la meilleure manière que j’ai trouvée de créer des choses qui aident les gens; ça te force à favoriser une approche scientifique, et à rester proche de la vérité; la tech a derrière elle une communauté énorme qui cherche à partager les connaissances de manière toujours plus efficace; et elle te met sur le chemin de l’apprentissage et de l’amélioration permanents. Ce sont des choses auxquelles je tiens profondément.\n\nJe suis originaire des Antipodes, mais j’ai vécu et travaillé également à Paris, à New York, et à Oslo. Je parle français - et suis très francophile - ainsi que le japonais et un chinois rudimentaire. Les gens me connaissent comme quelqu’un qui est à fond pour les langues, les cultures, les gens et les idées - je pense que c’est génial de faire un beau mariage entre  choses et la technologie.\n\nJe suis toujours partante pour un vif débat autour de questions de grammaire et de vocabulaire … mais au fond, ce qui me rend le plus heureuse, c’est d’exprimer les choses simplement, afin que tout le monde puisse comprendre, et puisse partager leurs propres perspectives, sans ego ou prétention.\n\nVoilà! J’espère que nous aurons l’occasion de faire connaissance un jour. N’hésites pas à dire bonjour, si l’envie te prend.",
-    "Asterisk": "*Technically, I'm also an American citizen",
+    "About main text": "J’adore la technologie et le processus de développement de produits. La tech est la meilleure manière que j’ai trouvée pour aider les gens; elle favorise une approche scientifique, restant toujours proche de la vérité; elle a derrière elle une communauté énorme qui a vocation à partager les connaissances de manière toujours plus efficace; et elle nous rassemble sur le chemin de l’apprentissage et de l’amélioration permanents. Ce sont des choses auxquelles je tiens profondément.\n\nJe suis australienne*, mais j’ai vécu et travaillé également à Paris, à New York, et à Oslo. Je parle français - et suis très francophile - ainsi que le japonais et un chinois rudimentaire. Mes proches me connaissent passionnée pour les langues, les cultures, les gens et les idées, et j’adore intégrer tout cela à la technologie.\n\nJe suis intarissable sur les sujets de grammaire et de vocabulaire … mais au fond, ce qui me rend le plus heureuse, c’est de réussir à exprimer les choses simplement pour favoriser la compréhension et le partage d’idées dans un esprit ouvert.\n\nVoilà! J’espère que nous aurons l’occasion de faire connaissance un jour. N’hésitez pas à dire bonjour, si l’envie vous prend.",
+    "Asterisk": "*Techniquement, j'ai la citoyenneté américaine aussi",
     "My values": "Des valeurs qui m'importent (et quelques idées encore en travail).",
-    "Make it ok to be wrong": "Make it ok to be wrong",
+    "Make it ok to be wrong": "Créer des environnements où il est acceptable d'avoir tort",
     "Make it ok to be wrong text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
-    "Be the one to change and be vulnerable": "Be the one to change and be vulnerable",
-    "Be the one to change and be vulnerable text": "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
-    "Care about the people you work with": "Care about the people you work with",
+    "Be the one to change": "Oser être celui qui est prêt à changer",
+    "Be the one to change text": "Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+    "Care about the people you work with": "Se soucier vraiment de ses collègues",
     "Care about the people you work with text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-    "People can change": "People can change",
+    "People can change": "Les gens sont capables de changer",
     "People can change text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   },
   "work": {
+    "Work button": "Page principale",
     "RACI Project Management Web App": "RACI Project Management Web App",
     "Digital Innovation Statistics App": "Digital Innovation Statistics App",
     "Food Systems Dialogues": "Food Systems Dialogues",
