--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -57,7 +57,7 @@
     }
   },
   "footer": {
-    "Don't hesitate to say hello": "N'hésites pas à dire hello / こんにちは / 你好! ",
+    "Don't hesitate to say hello": "N'hésite pas à dire hello / こんにちは / 你好! ",
     "I would love to hear from you": "Ça me ferait plaisir de faire ta connaissance!"
   }
 }
