--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -31,6 +31,8 @@
         "Front end": "Front end",
         "Back end": "Back end",
         "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
+        "View site": "サイトを見る",
+        "View the code": "コードを見る",
         "RACI": {
           "Title": "RACI Project Management",
           "Tech stack front end": "React, Semantic UI React, JWT",
@@ -38,7 +40,6 @@
           "Project main text": "I built this app to help solve the problem of managing roles on a team.\n\n'RACI' stands for Responsible, Accountable, Consulted, Informed. From my experience, the RACI (or DACI) framework provides a helpful level of detail to make clear who is responsible for getting a job done well. It reduces the risk of low quality work arising from murky or pooled accountability, it helps make sure the right people have input on tasks (and conversely, gives team members explicit authority to make decisions without input!), and it prompts conversations about workload and capacity.\n\nOn past projects, I used Google Sheets to build my own RACI frameworks. This app has the advantage of being a standardized process which is simple to use, and of supporting functionality such as flags and alerts, issue-tracking and workflow tools.",
           "Project short text": "A simple and standardized app for teams to designate who is Responsible, Accountable, Consulted and Informed on a given task. It helps reduce the risk of low quality work due to murky or pooled accountability, and prompts conversations about capacity, through the ability to flag tasks."
         },
-        "Digital Innovation Statistics": "Digital Innovation Statistics App",
         "Digital Innovation": {
           "Title": "Digital Innovation Statistics",
           "Tech stack front end": "Rails, Bootstrap",
