Adds Jesus Escalona to translation files and implements; minor fixes to Japanese translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,6 +32,7 @@
       "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
       "View site": "View site",
       "View the code": "View the code",
+      "Jesus Escalona": "Jesus Escalona",
       "RACI": {
         "Title": "RACI Project Management",
         "Tech stack front end": "React, Semantic UI React, JWT",
