--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -32,6 +32,7 @@
     "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
     "View site": "Voir le site",
     "View the code": "Voir le code",
+    "Jesus Escalona": "Jesus Escalona",
     "RACI": {
       "Title": "Outil de project management",
       "Tech stack front end": "React, Semantic UI React, JWT",
