--- a/locales/jp/translation.json
+++ b/locales/jp/translation.json
@@ -13,7 +13,7 @@
   },
   "about": {
     "About me": "私について",
-    "About main text": "はじめまして。私はブリジットと言います。テックのことが大好きです。理由というと、「実的」のような産業だと思うし、それから、開発者の皆さんは助け合う傾向があるし、人々に役に立つ物が作れるからです。\n\n私はオーストラリア人 でも、ニューヨーク市、パリ、オスロにも住んでいったことがあります。その上に、大学の時に日本の東京と大坂で過ごす機会がありました。日本は私の中で、特別な場所を占めています。フランス語がペラペラで、中国語が少し話すことができます。そして、日本語がしゃべれますが、きっと日本に帰って練習したいという希望を持っています。\n\n友達は「ブリジットさんはどんな人か」と聞かれると、「文化、言語、人に関することが大好きだ」と答えると思います。もし、人に関することとテックのことを組み合わせるとしたらならば、それはいいんじゃないと私は思います。\n\n多分、いつか私たちは会う機会があります。それまで、こんにちは ・　ボンジュア ・ 你好 を言って、まわないでください !\n\nよろしくお願いします。",
+    "About main text": "はじめまして。私はブリジットと言います。テックのことが大好きです。理由というと、「実的」のような産業だと思うし、それから、開発者の皆さんは助け合う傾向があるし、人々に役に立つ物が作れるからです。\n\n私はオーストラリア人 でも、ニューヨーク市、パリ、オスロにも住んでいったことがあります。その上に、大学の時に日本の東京と大坂で過ごす機会がありました。日本は私の中で、特別な場所を占めています。フランス語がペラペラで、中国語が少し話すことができます。そして、日本語がしゃべれますが、ぜひ日本に帰って練習したいという希望を持っています。\n\n友達は「ブリジットさんはどんな人か」と聞かれると、「文化、言語、人に関することが大好きだ」と答えると思います。もし、人に関することとテックのことを組み合わせるとしたらならば、それはいいんじゃないと私は思います。\n\n多分、いつか私たちは会う機会があります。それまで、こんにちは ・　ボンジュア ・ 你好 を言って、ためらわないでください !\n\nよろしくお願いします。",
     "Asterisk": "",
     "My values": "生活と仕事についての反射",
     "Make it ok to be wrong": "間違っても大丈夫にしましょう",
@@ -27,12 +27,13 @@
   },
   "work": {
     "Work button": "メインページ",
-        "Product-managed": "Product-managed",
+        "Product-managed": "プロダクト マネージャー",
         "Front end": "Front end",
         "Back end": "Back end",
         "See it live or view the user stories, or code.": "See it live or view the user stories, or code.",
         "View site": "サイトを見る",
         "View the code": "コードを見る",
+        "Jesus Escalona": "エスカローナヘズス",
         "RACI": {
           "Title": "プロジェクト管理のアプリ",
           "Tech stack front end": "React, Semantic UI React, JWT",
@@ -70,7 +71,7 @@
         }
       },
     "footer": {
-      "Don't hesitate to say hello": "Hello ・　ボンジュア ・ 你好 を言って、まわないでください ! ",
+      "Don't hesitate to say hello": "Hello ・　ボンジュア ・ 你好 を言って、ためらわないでください ! ",
       "I would love to hear from you": "友達になりましょう。"
     }
 }
